--- a/css/style.css
+++ b/css/style.css
@@ -29,20 +29,60 @@ body{
   display: flex;
 }
 
+.col{
+  padding: 0 30px; 
+}
+
+/* container generale solo width e margin 0 auto */
+.container{
+  width: 100%;
+  margin: 0 auto;
+  /* colonna gestisce il padding interni */
+}
+
 .d-bug{
   background-color: red;
   border: 1px solid black;
 }
 
+header .container{
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
 header .menu{
   background-color: var(--blue);
   height: 75px;
+  margin-bottom: 50px;
 }
 
-.container{
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 30px;
+header .menu .commands{
+  display: none;
 }
+
+/* main */
+
+/* card */
+.card .row{
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.row .col{
+  width: 310px;
+  height: 360px;
+  margin-bottom: 25px;
+}
+
+.row .col:first-child{
+  height: 605px;
+}
+
+.row .col:last-child{
+  margin-bottom: 60px;
+}
+/* /card */
+
 
 
