--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body{
   border: 1px solid black;
 }
 
+/* header */
 header .container{
   height: 100%;
   justify-content: space-between;
@@ -63,26 +64,37 @@ header .menu .commands{
 
 /* main */
 
-/* card */
-.card .row{
+/* demo */
+.demo .row{
   justify-content: center;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
-.row .col{
-  width: 310px;
+.demo .col{
   height: 360px;
-  margin-bottom: 25px;
 }
 
-.row .col:first-child{
-  height: 605px;
+.demo .col:first-child{
+  height: 610px;
 }
 
-.row .col:last-child{
-  margin-bottom: 60px;
+.demo .col:last-child{
+  margin-bottom: 80px;
 }
+
+
 /* /card */
+
+/* strategic */
+.strategic{
+  background-color: var(--violet);
+}
+
+.strategic .row{
+  height: 1400px;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 
 
