--- a/css/style.css
+++ b/css/style.css
@@ -82,9 +82,6 @@ header .menu .commands{
   margin-bottom: 80px;
 }
 
-
-/* /card */
-
 /* strategic */
 .strategic{
   background-color: var(--violet);
@@ -95,6 +92,12 @@ header .menu .commands{
   flex-direction: column;
   justify-content: space-between;
 }
+/* /strategic */
 
-
+/* testimonials */
+.testimonials .row{
+  height: 2165px;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
