--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@
 }
 
 body{
-  font-family: 'PT Sans', sans-serif;;
+  font-family: 'PT Sans', sans-serif;
+  text-align: center;
 }
 
 .l-height{
@@ -32,6 +33,7 @@ body{
 .col{
   padding: 0 30px; 
 }
+
 
 /* container generale solo width e margin 0 auto */
 .container{
@@ -55,7 +57,9 @@ header .container{
 header .menu{
   background-color: var(--blue);
   height: 75px;
-  margin-bottom: 50px;
+  width: 100%;
+  position: fixed;
+  z-index: 999;
 }
 
 header .menu .commands{
@@ -65,13 +69,17 @@ header .menu .commands{
 /* main */
 
 /* demo */
+.demo {
+  padding-top: 125px;
+}
+
 .demo .row{
-  justify-content: center;
   flex-direction: column;
 }
 
 .demo .col{
   height: 360px;
+  margin-bottom: 25px;
 }
 
 .demo .col:first-child{
@@ -88,16 +96,139 @@ header .menu .commands{
 }
 
 .strategic .row{
-  height: 1400px;
   flex-direction: column;
-  justify-content: space-between;
+  margin-bottom: 70px;
+  padding-bottom: 65px;
+}
+
+.strategic .col:first-child{
+  height: 447px;
+}
+
+.strategic .planning{
+  height: 236px;
+  border-bottom: 40px;
+}
+
+.strategic .planning h2{
+  padding-bottom: 65px
+}
+
+.strategic .col:last-child{
+  height: 615px;
 }
 /* /strategic */
 
 /* testimonials */
 .testimonials .row{
-  height: 2165px;
   flex-direction: column;
-  justify-content: space-between;
+  margin-bottom: 77px;
 }
 
+.testimonials .col{
+  margin-bottom: 35px;
+}
+
+.testimonials .col:first-child{
+  height: 335px;
+  margin-bottom: 55px;
+}
+
+.testimonials .nat,.bob{
+  height: 500px;
+}
+
+.testimonials .celia{
+  height: 530px;
+}
+/* /testimonials */
+
+/* benefits */
+.benefits{
+  background-color: var(--violet);
+}
+
+.benefits .row{
+padding-top: 75px;
+flex-direction: column;
+padding-bottom: 33px
+}
+
+.benefits .card{
+  height: 400px;
+}
+
+.benefits .col{
+  margin-bottom: 32px;
+}
+
+.benefits .quality{
+  margin-top: 43px;
+}
+/* /benefits */
+
+/* about us */
+.about-us .col:first-child{
+  margin-top: 96px;
+  margin-bottom: 80px;
+  height: 545px;
+}
+
+.about-us h2{
+  margin-bottom: 60px;
+}
+
+.about-us .middle{
+  height: 330px;
+  margin-bottom: 60px;
+}
+
+.about-us .col:last-child{
+  height: 420px;
+  margin-bottom: 80px;
+}
+/* /about us */
+
+/* get-started */
+.get-started{
+  background-color: var(--violet);
+}
+
+.get-started .row{
+  padding-top: 70px;
+  padding-bottom: 65px;
+}
+
+.get-started .col:first-child{
+  height: 110px;
+}
+
+.get-started .free{
+  height: 165px;
+  margin-top: 50px;
+}
+
+.get-started h2{
+  padding-bottom: 50px;
+}
+
+.get-started .col:last-child{
+  height: 135px;
+  margin-top: 40px;
+}
+
+/* get started */
+.footer{
+  background-color: var(--footer-grey);
+  color: white;
+  padding-top: 45px;
+  padding-bottom: 40px;
+}
+
+.footer .col:first-child{
+  height: 55px;
+}
+
+.footer .col:last-child{
+  margin-top: 70px;
+}
