--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,8 @@ body{
 }
 
 .col{
-  padding: 0 30px; 
+  padding: 0 15px; 
 }
-
 
 /* container generale solo width e margin 0 auto */
 .container{
@@ -48,15 +47,14 @@ body{
 }
 
 /* header */
-header .container{
-  height: 100%;
+header .row{
+  height: 75px;
   justify-content: space-between;
   align-items: center;
 }
 
 header .menu{
   background-color: var(--blue);
-  height: 75px;
   width: 100%;
   position: fixed;
   z-index: 999;
@@ -73,21 +71,28 @@ header .menu .commands{
   padding-top: 125px;
 }
 
+.demo .col{
+  /* height: 360px; */
+  margin-bottom: 25px;
+}
+
 .demo .row{
   flex-direction: column;
 }
 
-.demo .col{
-  height: 360px;
-  margin-bottom: 25px;
-}
-
-.demo .col:first-child{
+/* .demo .col:first-child{
   height: 610px;
+} */
+
+.demo .card{
+  background-color: var(--lightblue);
+  height: 100%;
+  border-radius: 35px;
+  padding-top: 30px;
 }
 
-.demo .col:last-child{
-  margin-bottom: 80px;
+.demo .card h2{
+  font-size: 1.5rem;
 }
 
 /* strategic */
@@ -97,6 +102,7 @@ header .menu .commands{
 
 .strategic .row{
   flex-direction: column;
+  margin-top: 80px;
   margin-bottom: 70px;
   padding-bottom: 65px;
 }
@@ -129,18 +135,17 @@ header .menu .commands{
   margin-bottom: 35px;
 }
 
-.testimonials .col:first-child{
+/* .testimonials .col:first-child{
   height: 335px;
-  margin-bottom: 55px;
-}
+} */
 
-.testimonials .nat,.bob{
+/* .testimonials .nat,.bob{
   height: 500px;
 }
 
 .testimonials .celia{
   height: 530px;
-}
+} */
 /* /testimonials */
 
 /* benefits */
@@ -162,9 +167,6 @@ padding-bottom: 33px
   margin-bottom: 32px;
 }
 
-.benefits .quality{
-  margin-top: 43px;
-}
 /* /benefits */
 
 /* about us */
@@ -231,4 +233,53 @@ padding-bottom: 33px
 
 .footer .col:last-child{
   margin-top: 70px;
+}
+
+/* RESPONSIVE */
+
+/* tablet */
+@media (min-width: 768px){
+  .container{
+    width: 720px;
+  }
+
+  header .container .row,
+  .demo .row,
+  .benefits .row{
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .demo .col{
+    width: calc(100% / 3);
+  }
+
+  .demo .col:first-child{
+    width: calc(100% / 1.5);
+  }
+
+  .testimonials .card{
+    display: flex;
+    align-items: center;
+  }
+
+  .benefits .col{
+    width: 50%;
+  }
+}
+
+/* desktop */
+@media (min-width: 1200px){
+  .container{
+    width: 1140px;
+  }
+
+  .menu .hamburger{
+    display: none;
+  }
+
+  header .menu .commands{
+    display: block;
+  }
+
 }
