--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,11 @@ padding-bottom: 33px
     justify-content: left;
   }
 
+  .strategic .img{
+    width: 100%;
+    height: 100%;
+  }
+
   .testimonials .card{
     display: flex;
     align-items: center;
